Fixed the header font size, which was too small, and is now the same size as the rest of the page.

--- a/style.css
+++ b/style.css
@@ -163,6 +163,6 @@ footer {
 	}
 	
 	header {
-		font-size: 0.9em;
+		font-size: 1em;
 	}
 }
